kubernetes/apps/observability/victoria-logs/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Victoria Logs
    gethomepage.dev/icon: victoriametrics.svg
    gethomepage.dev/pod-selector: app.kubernetes.io/name=victoria-logs-single
spec:
  hostnames:
    - victoria-logs.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302
    - backendRefs:
        - name: victoria-logs-server
          port: 9428
